--- a/project1/index.html
+++ b/project1/index.html
@@ -65,6 +65,10 @@
   <hr/>
     <h3><a href="Hobbies.html">Hobbies</a></h3>
     <h3><a href="Contact.html">Contact me</a></h3>
+
+  <footer>
+    <p>Janna Lomibao. All rights reserved</p>
+  </footer>
   
 </body>
 </html>
